# Vision_Exam

homework_ws/install/: local_setup.sh  setup.sh
homework_ws/install/homework/lib/homework/: main_node
homework_ws/install/homework/share/ament_index/resource_index/parent_prefix_path/: homework
homework_ws/install/homework/share/homework/: local_setup.sh  package.sh
homework_ws/log/: latest_build
homework_ws/src/homework/: CMakeLists.txt  package.xml
homework_ws/src/homework/include/homework/: kalman_filter_and_smth_else.h  serial_port.h
homework_ws/src/homework/src/: kalman_filter_and_smth_else.cpp  main.cpp  serial_port.cpp
homework_ws/src/homework_bringup/: CMakeLists.txt  package.xml
homework_ws/src/homework_bringup/config/: decision_params.yaml  vision_params.yaml
homework_ws/src/homework_bringup/include/robot_detector/: detector_node.hpp
homework_ws/src/homework_bringup/launch/: bringup.launch.py
homework_ws/src/homework_bringup/src/: detector_node.cpp  main.cpp
homework_ws/src/robot_common/: CMakeLists.txt  package.xml
homework_ws/src/robot_common/include/robot_common/: geometry_utils.hpp  image_utils.hpp  kalman_tracker.hpp
homework_ws/src/robot_common/src/: geometry_utils.cpp  image_utils.cpp  kalman_tracker.cpp
homework_ws/src/robot_decision_n_vision/: CMakeLists.txt  package.xml
homework_ws/src/robot_decision_n_vision/include/robot_decision_n_vision/: robot_decision.hpp  robot_vision.hpp
homework_ws/src/robot_decision_n_vision/src/: decision.cpp  robot_decision.cpp  robot_vision.cpp  vision.cpp
homework_ws/src/robot_detector/: CMakeLists.txt  package.xml
homework_ws/src/robot_detector/include/robot_detector/: detector_node.hpp
homework_ws/src/robot_detector/src/: detector_node.cpp
homework_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
homework_ws/src/robot_interfaces/msg/: Armor.msg  ArmorArray.msg
homework_ws/src/serial_port/: CMakeLists.txt  package.xml
homework_ws/src/serial_port/include/serialPro/: robotComm.h
homework_ws/src/serial_port/src/: serial_port.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/calculating_client/lib/calculating_client/: client
ros2_ws/install/calculating_client/share/calculating_client/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/rm_server/include/rm_server/rm_server/srv/detail/: el_gamal_encrypt__builder.hpp  el_gamal_encrypt__functions.c  el_gamal_encrypt__struct.h  el_gamal_encrypt__struct.hpp  el_gamal_encrypt__traits.hpp  el_gamal_encrypt__type_support.c  el_gamal_encrypt__type_support.cpp
ros2_ws/install/rm_server/local/lib/python3.10/dist-packages/rm_server-0.0.0-py3.10.egg-info/: SOURCES.txt
ros2_ws/install/rm_server/local/lib/python3.10/dist-packages/rm_server/msg/: _get_el_gamal_params.py  _get_el_gamal_params_s.c
ros2_ws/install/rm_server/local/lib/python3.10/dist-packages/rm_server/srv/: _el_gamal_encrypt.py  _el_gamal_encrypt_s.c
ros2_ws/install/rm_server/share/ament_index/resource_index/parent_prefix_path/: rm_server
ros2_ws/install/rm_server/share/rm_server/: local_setup.sh  package.sh
ros2_ws/install/rm_server/share/rm_server/cmake/: export_rm_server__rosidl_generator_cExport.cmake  export_rm_server__rosidl_generator_pyExport-noconfig.cmake  export_rm_server__rosidl_generator_pyExport.cmake  export_rm_server__rosidl_typesupport_fastrtps_cppExport.cmake  rm_serverConfig.cmake  rm_server__rosidl_typesupport_cExport-noconfig.cmake  rm_server__rosidl_typesupport_cExport.cmake  rm_server__rosidl_typesupport_cppExport.cmake  rm_server__rosidl_typesupport_introspection_cExport-noconfig.cmake  rm_server__rosidl_typesupport_introspection_cExport.cmake  rm_server__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_ws/install/rm_server/share/rm_server/srv/: ElGamalEncrypt.idl  ElGamalEncrypt.srv
ros2_ws/log/: latest_build
ros2_ws/src/calculating_client/: CMakeLists.txt  package.xml
ros2_ws/src/calculating_client/src/: calculating.cpp
ros2_ws/src/rm_server/: CMakeLists.txt
