<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_decision_n_vision</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ArcyFieldS@163.com">arcyfields</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>serial_port</depend>
  <depend>robot_interfaces</depend>
  <depend>robot_common</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
